--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-cloudinary-uploader": "^1.1.2",
     "react-dom": "^18",
     "stripe": "^14.19.0",
+    "svix": "^1.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
